--- a/wrn-angular/app/index.html
+++ b/wrn-angular/app/index.html
@@ -19,6 +19,15 @@
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <nav class="navbar navbar-default navbar-fixed-top">
+  <a class="navbar-brand" href="/#/">Write Right Now</a>
+  <div class="container-fluid">
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="/#/login">Login</a></li>
+        <li><a href="">Register</a></li>
+    </ul>
+  </div><!-- container-fluid -->
+</nav>
 
     <div>
         <div ng-view=""></div>
@@ -45,6 +54,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/controllers/session.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/entry.js"></script>
         <script src="scripts/services/services.js"></script>
