--- a/wrn-angular/app/index.html
+++ b/wrn-angular/app/index.html
@@ -24,7 +24,8 @@
   <div class="container-fluid">
     <ul class="nav navbar-nav navbar-right">
         <li><a href="/#/login">Login</a></li>
-        <li><a href="">Register</a></li>
+        <li><a href="" ng-controller="SessionCtrl as session" ng-click="session.logout()">Logout</a></li>
+        <li><a href="/#/register">Register</a></li>
     </ul>
   </div><!-- container-fluid -->
 </nav>
@@ -55,6 +56,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/session.js"></script>
+        <script src="scripts/controllers/user.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/entry.js"></script>
         <script src="scripts/services/services.js"></script>
