moved date calculation to Stats service

--- a/wrn-angular/app/index.html
+++ b/wrn-angular/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -52,6 +53,8 @@
     <script src="bower_components/quill/dist/quill.js"></script>
     <script src="bower_components/ngquill/src/ng-quill.min.js"></script>
     <script src="bower_components/angular-fullscreen/src/angular-fullscreen.js"></script>
+    <script src="bower_components/Chart.js/Chart.min.js"></script>
+    <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -61,6 +64,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/entry.js"></script>
         <script src="scripts/services/services.js"></script>
+        <script src="scripts/services/stats.js"></script>
         <!-- endbuild -->
 </body>
 </html>
