--- a/wrn-angular/app/index.html
+++ b/wrn-angular/app/index.html
@@ -25,13 +25,18 @@
         ng-controller="ViewCtrl" 
         ng-class="navigationClass" 
         >
-      <a class="navbar-brand" href="/#/">Write Right Now</a>
       <div class="container-fluid">
+
+        <div class="navbar-header">  
+          <a class="navbar-brand" href="/#/">Write Right Now</a>
+        </div>
         <ul class="nav navbar-nav navbar-right">
             <li ng-show="!$root.currentUser"><a href="/#/login">Login</a></li>
             <li ng-show="!$root.currentUser"><a href="/#/register">Register</a></li>
-            <li ng-show="$root.currentUser"  ng-cloak><a href="/#/stats"><span ng-bind="$root.currentUser.name"></span></a></li>
-            <li ng-show="$root.currentUser" ng-controller="UserCtrl as user"><a href="" ng-click="user.logout()">Logout</a></li>
+            <li ng-show="$root.currentUser"><a href="/#/stats">
+                <span class="glyphicon glyphicon-stats"></span> Stats</a></li>
+            <li ng-show="$root.currentUser" ng-controller="UserCtrl as user"><a href="" ng-click="user.logout()">
+                <span class="glyphicon glyphicon-off"></span> Logout</a></li>
         </ul>
       </div><!-- container-fluid -->
     </nav>
