--- a/wrn-angular/app/index.html
+++ b/wrn-angular/app/index.html
@@ -29,7 +29,9 @@
       <div class="container-fluid">
 
         <div class="navbar-header">  
-          <a class="navbar-brand" href="/#/">Write Right Now</a>
+          <!-- <a class="navbar-brand" href="/#/">WriteRightNow</a> -->
+        <a class="navbar-brand" style="" href="/#/">Write Right Now</a>
+          
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li ng-show="!$root.currentUser"><a href="/#/login">Login</a></li>
