--- a/wrn-angular/app/index.html
+++ b/wrn-angular/app/index.html
@@ -27,9 +27,7 @@
       <div class="container-fluid">
 
         <div class="navbar-header">  
-          <!-- <a class="navbar-brand" href="/#/">WriteRightNow</a> -->
-        <a class="navbar-brand" style="" href="/#/">Write Right Now</a>
-          
+            <a class="navbar-brand" style="text-align: right" href="/#/">Write<br>Right<br>Now</a>          
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li ng-show="!$root.currentUser"><a href="/#/login">Login</a></li>
